fix: Ensure view merch by dropdown is visible above delivery banner

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,6 +42,10 @@ body {
     color: white;
 }
 
+.navbar-nav .dropdown-menu {
+    position: absolute !important;
+}
+
 /* -------------------------------- Text */
 
 a {
